<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_name"
        style="@style/Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_recent_files"
        style="@style/BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/recent_files"
        app:layout_constraintStart_toStartOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recent_images"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_component"
        android:layout_marginTop="@dimen/margin_component"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_files"
        app:spanCount="4"
        tools:listitem="@layout/list_item_recent_images" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_main_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_camera"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:background="@drawable/bg_main_circle"
            android:padding="@dimen/margin_component"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toTopOf="@id/tv_camera"
            app:layout_constraintEnd_toStartOf="@id/image_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_camera"
            style="@style/TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image_camera"
            app:layout_constraintStart_toStartOf="@id/image_camera"
            app:layout_constraintTop_toBottomOf="@id/image_camera" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_gallery"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:background="@drawable/bg_main_circle"
            android:padding="@dimen/margin_component"
            android:src="@drawable/ic_gallery"
            app:layout_constraintBottom_toTopOf="@id/tv_camera"
            app:layout_constraintEnd_toStartOf="@id/image_draw"
            app:layout_constraintStart_toEndOf="@id/image_camera"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_gallery"
            style="@style/TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image_gallery"
            app:layout_constraintStart_toStartOf="@id/image_gallery"
            app:layout_constraintTop_toBottomOf="@id/image_gallery" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_draw"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:background="@drawable/bg_main_circle"
            android:padding="@dimen/margin_component"
            android:src="@drawable/ic_draw"
            app:layout_constraintBottom_toTopOf="@id/tv_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_gallery"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_draw"
            style="@style/TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image_draw"
            app:layout_constraintStart_toStartOf="@id/image_draw"
            app:layout_constraintTop_toBottomOf="@id/image_draw" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>